# Mister

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  NOTES.md  README.md  appveyor.yml  bors.toml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
mister_core/: Cargo.toml  README.md
mister_core/src/: format.rs  image.rs  lib.rs  project.rs
mister_core/src/format/: mod.rs  rgba.rs
mister_gui/: Cargo.toml  README.md
mister_gui/src/: _seed_mode.rs  layout.rs  lib.rs  render.rs  texture_mode.rs  util.rs
mister_gui/src/shaders/: rect.frag150.glsl  rect.vert150.glsl
scripts/: build.sh
src/: main.rs  test.frag  test.vert
