[package]
name = "mister"
version = "0.1.0"
authors = ["Bob Hostern <bob.hostern@gmail.com>"]
license = "NONE"
readme = "NOTES.md"

[dependencies]
# specs = "^0.7"
# TODO: Because we're a drawing application, write the rendering system in a renderer agnostic way!
# Essentially, use gfx to its limit in generization to write the rendering system
gfx = "^0.14"
gfx_device_gl = "^0.13"
glutin = "^0.7"
gfx_window_glutin = "^0.14"
slog = "^1.5"
rusttype = "^0.2"
palette = "^0.2"
rand = "0.3"
# TODO: Add palette-rs, image, backtrace-rs, error-chain, clap
# NOTE for image: Unneccessary in mister once native plugins land, or a binding to the scripting language is made (prob. both)
# In fact, I'm probably not going to add image as a library to mister, but as one to the plugin I make right after to handle
# some importing and exporting.
# IMPORTANT NOTE (due to image): Import/export plugins must POTENTIALLY support more than one format.
# TODO: Add slog outputs

mister-core = {path = "mister_core"}

[[bin]]
name = "mister"
path = "src/main.rs"

[workspace]
